--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -65,6 +65,14 @@ connectors:
       - name: http.status_code
 
 service:
+  telemetry:
+    metrics:
+      readers:
+        - periodic:
+            exporter:
+              otlp:
+                protocol: http/protobuf
+                endpoint: http://otel-collector:4319
   pipelines:
     traces:
       receivers: [otlp]
