set metric interval to 60s

--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -69,6 +69,7 @@ service:
     metrics:
       readers:
         - periodic:
+            interval: 60000
             exporter:
               otlp:
                 protocol: http/protobuf
