--- a/compose.yaml
+++ b/compose.yaml
@@ -49,6 +49,7 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4319"
       OTEL_SERVICE_NAME: "otel-sample-app"
       SERVICE_VERSION: "v0.1"
+      ENVIRONMENT_NAME: "production"
     command: ["/bin/sh", "-c", "rm -f tmp/pids/server.pid; bin/rails server -p 3000 -b 0.0.0.0"]
 
   app01:
@@ -63,6 +64,7 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4319"
       OTEL_SERVICE_NAME: "otel-sample-app"
       SERVICE_VERSION: "v1.0"
+      ENVIRONMENT_NAME: "production"
     command: ["/bin/sh", "-c", "rm -f tmp/pids/server.pid; bin/rails server -p 3000 -b 0.0.0.0"]
 
   app02:
@@ -77,6 +79,7 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4319"
       OTEL_SERVICE_NAME: "otel-sample-app"
       SERVICE_VERSION: "v2.0"
+      ENVIRONMENT_NAME: "production"
     command: ["/bin/sh", "-c", "rm -f tmp/pids/server.pid; bin/rails server -p 3000 -b 0.0.0.0"]
 
   app03:
@@ -91,6 +94,7 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4319"
       OTEL_SERVICE_NAME: "otel-sample-app"
       SERVICE_VERSION: "v3.0"
+      ENVIRONMENT_NAME: "staging"
     command: ["/bin/sh", "-c", "rm -f tmp/pids/server.pid; bin/rails server -p 3000 -b 0.0.0.0"]
 
   db:
